[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://fonts/dynamic_font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 810.0
margin_bottom = 600.0
color = Color( 0.392157, 0.368627, 0.329412, 1 )

[node name="Foreground" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 605.0
margin_bottom = 400.0
color = Color( 0.580392, 0.498039, 0.372549, 1 )

[node name="Title" type="Label" parent="."]
anchor_bottom = 100.0
margin_left = 200.0
margin_top = 220.0
margin_right = 605.0
margin_bottom = -59710.0
custom_fonts/font = SubResource( 1 )
text = "Pixel Parking"
align = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 313.0
margin_right = 510.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="BackButton" type="Button" parent="."]
visible = false
margin_left = 219.0
margin_top = 328.0
margin_right = 335.0
margin_bottom = 383.0
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="Level_1" type="Button" parent="."]
visible = false
margin_left = 477.0
margin_top = 329.0
margin_right = 583.0
margin_bottom = 384.0
custom_fonts/font = ExtResource( 3 )
text = "Play"

[connection signal="start" from="." to="." method="_on_HUD_start"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Level_1" to="." method="_on_Level_1_pressed"]
